[metadata]
name = lob-transformer-mpc
version = 0.1.0
author = Yuto Hayashi
url = https://github.com/YutoHayashi/lob-transformer-mpc
licence = MIT

[options]
packages = 
    lob_transformer_mpc
python_requires = ==3.11.*
include_package_data = True
install_requires =
    numpy<2
    pandas
    pulp
    python-dotenv
    torch
